GTK 3.22/20: fix calendar grid alignment in Ubuntu/w custom fonts
*Clean up and simplfy pseudostriped treeviews
*Show separators in  filechooser sidebar list view
*Bump version again for GTK 3.22.4

--- a/UbuntuStudio_Legacy/gtk-3.20/apps/apps.css
+++ b/UbuntuStudio_Legacy/gtk-3.20/apps/apps.css
@@ -8,8 +8,6 @@
 .caja-navigation-window paned paned treeview.view{                          			
 		background-image: linear-gradient(to bottom,
 					  #eeeeee,
-	                          #eeeeee 30%,
-	                          #ffffff 70%,
 					  #ffffff); 
 }
 
@@ -130,8 +128,6 @@ window.background>box>box>box>scrolledwindow>viewport.frame {
 .nemo-window scrolledwindow treeview.view{
 		background-image: linear-gradient(to bottom,
 					  #eeeeee,
-	                          #eeeeee 30%,
-	                          #ffffff 70%,
 					  #ffffff); 
 }
 
@@ -257,8 +253,6 @@ nautilus-desktop-window.nautilus-window  scrolledwindow, /*Nautilus before the s
 .nautilus-window overlay>scrolledwindow>*>treeview.view	 {                          			
 		background-image: linear-gradient(to bottom,
 					  #eeeeee,
-	                          #eeeeee 30%,
-	                          #ffffff 70%,
 					  #ffffff); 
 }
 
